# tauri-ipc-err

./: package.json  pnpm-lock.yaml
src/: index.html  main.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
